전함 소유권 기능 스마트 계약 추가

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 		<script src="/js/ContractABI.js"></script>
 		<script src="/js/ContractController.js"></script>
 		<script src="/js/WalletManager.js"></script>
+		<script src="/js/PartInfos.js"></script>
 		<script>INIT_OBJECTS();</script>
 		<script src="/js/app.js"></script>
 	</body>
