부품 마켓 기능 추가

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=Edge, chrome=1">
 		<link rel="shortcut icon" href="/resource/favicon.ico" />
 		<link rel="stylesheet" type="text/css" href="/resource/UPPERCASE-BOOT/R/BASE_STYLE.css" />
+		<style>
+			@import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
+			body {
+				font-family: 'Nanum Gothic', sans-serif;
+			}
+		</style>
 		<title>EtherShip</title>
 	</head>
 	<body>
@@ -24,6 +30,18 @@
 		<script src="/js/ContractController.js"></script>
 		<script src="/js/WalletManager.js"></script>
 		<script src="/js/PartInfos.js"></script>
+		<script src="/js/VIEW/InstallMetaMask.js"></script>
+		<script src="/js/VIEW/Home.js"></script>
+		<script src="/js/VIEW/ManageShip.js"></script>
+		<script src="/js/VIEW/SelectPlanet.js"></script>
+		<script src="/js/VIEW/PlanetInfo.js"></script>
+		<script src="/js/VIEW/InvadePlanetPresentation.js"></script>
+		<script src="/js/VIEW/InvadePlanetWin.js"></script>
+		<script src="/js/VIEW/InvadePlanetLose.js"></script>
+		<script src="/js/VIEW/Battle.js"></script>
+		<script src="/js/VIEW/BattlePresentation.js"></script>
+		<script src="/js/VIEW/BattleWin.js"></script>
+		<script src="/js/VIEW/BattleLose.js"></script>
 		<script>INIT_OBJECTS();</script>
 		<script src="/js/app.js"></script>
 	</body>
