작업 중 중간 저장

--- a/index.html
+++ b/index.html
@@ -37,12 +37,13 @@
 		<script src="/js/ContractABI.js"></script>
 		<script src="/js/ContractController.js"></script>
 		<script src="/js/WalletManager.js"></script>
-		<script src="/js/PartInfos.js"></script>
+		<script src="/js/PlanetDescriptions.js"></script>
 		<script src="/js/VIEW/InstallMetaMask.js"></script>
 		<script src="/js/VIEW/Home.js"></script>
 		<script src="/js/VIEW/ManageShip.js"></script>
 		<script src="/js/VIEW/SelectPlanet.js"></script>
 		<script src="/js/VIEW/PlanetInfo.js"></script>
+		<script src="/js/VIEW/PartImagePositions.js"></script>
 		<script src="/js/VIEW/InvadePlanetPresentation.js"></script>
 		<script src="/js/VIEW/InvadePlanetWin.js"></script>
 		<script src="/js/VIEW/InvadePlanetLose.js"></script>
