--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<script>
 			CONFIG.isDevMode = true;
 			BROWSER_CONFIG.SkyEngine = {
-				isDebugMode : true,
+				//isDebugMode : true,
 				width : 1280 * 2,
 				height : 720 * 2
 			};
